--- a/burubaru-2018flood.html
+++ b/burubaru-2018flood.html
@@ -166,6 +166,24 @@
 </div>
 <div style="text-align: center;"></div>
 
+<p>另外上几张去东广岛天文台的照片</p>
+<div class="picture-container">
+    <img src="burubaru/2018flood/天文台/6b4.JPG" class="picture">
+</div>
+<div style="text-align: center;"> 不是地震。</div>
+<div class="picture-container">
+    <img src="burubaru/2018flood/天文台/6bf.JPG" class="picture">
+</div>
+<div class="picture-container">
+    <img src="burubaru/2018flood/天文台/6b9.JPG" class="picture">
+</div>
+<div style="text-align: center;">同样到处是泥。</div>
+
+<div class="picture-container">
+    <img src="burubaru/2018flood/天文台/6b7.JPG" class="picture">
+</div>
+
+
 <p>下一章</p>
 <br><br>
 
