--- a/burubaru.html
+++ b/burubaru.html
@@ -185,9 +185,132 @@
 
 
 <div class="picture-container">
-   <img src="burubaru/.JPG" class="picture">
+   <img src="burubaru/after_kagami/7.JPG" class="picture">
+</div>
+<div style="text-align: center;">继续上坡路，冲！右侧是公交站“镜山公园”。</div>
+
+<div class="picture-container">
+   <img src="burubaru/HU/13.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
+<div class="picture-container">
+   <img src="burubaru/after_kagami/8.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+<div class="picture-container">
+   <img src="burubaru/after_kagami/10.JPG" class="picture">
+</div>
+
+
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/17.JPG" class="picture">
+</div>
+
+<div style="text-align: center;">上下两张往回拍。</div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/18.JPG" class="picture">
+</div>
+
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/16.JPG" class="picture">
+</div>
+<div style="text-align: center;">往回拍。</div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/19.JPG" class="picture">
+</div>
+<div style="text-align: center;">到分岔路了。</div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/20.JPG" class="picture">
+</div>
+<div style="text-align: center;">去健身房从这里往右，去学校一直往前。经过隧道时我经常听到鸡啼，然后听到鸡啼就容易想起会口技的小t子。</div>
+
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/15.JPG" class="picture">
+</div>
+<div style="text-align: center;">往回拍，那条短斜坡去公交站。</div>
+<div class="picture-container">
+   <img src="burubaru/after_kagami/14.JPG" class="picture">
+</div>
+<div style="text-align: center;">出了洞口要冲下坡了。图利车的右侧方向去池上学生宿舍，宿费一个月只要一万多日元。这张往回拍。</div>
+<div class="picture-container">
+   <img src="burubaru/after_kagami/21.JPG" class="picture">
+</div>
+<div style="text-align: center;">往回拍。看到斜坡了吗？</div>
+<div class="picture-container">
+   <img src="burubaru/after_kagami/13.JPG" class="picture">
+</div>
+<div style="text-align: center;">往回拍。</div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/2.JPG" class="picture">
+</div>
+<div style="text-align: center;">看到远处中间白色的烟囱吗？我们快到了。我们现在要冲下坡了。我第一年来特备冷（2017-2018冬天），这段下坡路由于被左侧遮挡，结冰了到八九点也不化，下坡时推着车觉得很惊险。</div>
+<div class="picture-container">
+   <img src="burubaru/after_kagami/3.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/11.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/10.JPG" class="picture">
+</div>
+<div style="text-align: center;">现在等过马路，我介绍一下这边情况。这是个十字路口。图里是我等马路时的右手边，到了这里又回到市区了。一个马路就是警察局，之后这边最大的房地产。再往前走（下坡路）约两百米是健身房。左面有银行，再往前有Youme Town（大型购物中心，有百元店及超市不过价格比其他贵）。这一带很多吃的，房租也贵很多，单身公寓要四五万一个月。</div>
+<div class="picture-container">
+   <img src="burubaru/after_kagami/3.JPG" class="picture">
+</div>
+<div style="text-align: center;">另一角度看十字路口。</div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/17.JPG" class="picture">
+</div>
+<div class="picture-container">
+   <img src="burubaru/after_kagami/12.JPG" class="picture">
+</div>
+<div style="text-align: center;">过完马路往回拍。</div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/4.JPG" class="picture">
+</div>
+<div style="text-align: center;">烟囱越来越近了。2017年12月1日我第一天来的时候，看到这个烟囱，我深深感觉，我终于来了～</div>
+<div class="picture-container">
+   <img src="burubaru/after_kagami/5.JPG" class="picture">
+</div>
+<div class="picture-container">
+   <img src="burubaru/HU/1.JPG" class="picture">
+</div>
+<div style="text-align: center;">我们来赏赏樱。这是春季照。</div>
+<div class="picture-container">
+   <img src="burubaru/HU/15.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+   <img src="burubaru/HU/16.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+   <img src="burubaru/HU/14.JPG" class="picture">
+</div>
+<div style="text-align: center;">马上往左拐，从1号门进入。理学部最靠近1号门的，实在是好地方～</div>
+<div class="picture-container">
+   <img src="burubaru/HU/12.JPG" class="picture">
+</div>
+<div style="text-align: center;">理学部駐輪場。</div>
+<div class="picture-container">
+   <img src="burubaru/HU/2.JPG" class="picture">
+</div>
+<div style="text-align: center;">把车停好。大家认得我的车吗？黄色的。</div>
+
+
+
 
 <!--    <footer>
         <p>&copy; 2024 Life in Saijo</p>
