--- a/kagami_sakura.html
+++ b/kagami_sakura.html
@@ -38,11 +38,19 @@
 <div class="picture-container">
     <img src="burubaru/20200331sakura/43.JPG" class="picture">
 </div>
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/20.JPG" class="picture">
+</div>
 <div class="picture-container">
     <img src="burubaru/20200331sakura/45.JPG" class="picture">
 </div>
 <div class="picture-container">
     <img src="burubaru/20200331sakura/49.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/15.JPG" class="picture">
 </div>
 <div class="picture-container">
     <img src="burubaru/20200331sakura/20.JPG" class="picture">
@@ -74,8 +82,37 @@
     <img src="burubaru/20200331sakura/11.JPG" class="picture">
 </div>
 
+
+
 <div class="picture-container">
-    <img src="burubaru/20200331sakura/17.JPG" class="picture">
+    <img src="burubaru/kagamiyama/sakura/1.JPG" class="picture">
+</div>
+
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/2.JPG" class="picture">
+</div>
+
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/3.JPG" class="picture">
+</div>
+
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/6.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/9.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/17.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/21.JPG" class="picture">
 </div>
 
 <div class="picture-container">
@@ -85,7 +122,9 @@
 <div class="picture-container">
     <img src="burubaru/20200331sakura/18.JPG" class="picture">
 </div>
-
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/sakura/4.JPG" class="picture">
+</div>
 <p>下一章</p>
 <br><br>
 
