--- a/kagami.html
+++ b/kagami.html
@@ -17,7 +17,7 @@
     <main class="content">
         <article>
             <p>上一章</p>
-<p>2017年12月，西条尚未有健身房之时，我都去镜山公园跑步。由于刚去的时候是冬天，我7点起来天还黑，在镜山从天黑跑到天亮。在东京的公园，六点半已经很多人，这里完全没人！到了2018年7月有健身房后，我就只有春天和秋天来跑了。刚来西条晨跑那段时间，还经常遇到吹笛的人，每次都和我打招呼的。现在我带大家跑一下我在镜山公园的跑步线路，一圈1.2公里，中间有饮水机不过我一般就把水放在入口处。</p>
+<p>2017年12月，西条尚未有健身房之时，我都去镜山公园跑步。由于刚去的时候是冬天，我7点起来天还黑，在镜山从天黑跑到天亮。在东京的公园，六点半已经很多人，这里完全没人！到了2018年7月有健身房后，我就只有春天和秋天来跑了。刚来西条晨跑那段时间，还经常遇到吹笛的人，每次都和我打招呼的。现在我带大家跑一下我在镜山公园的跑步线路，一圈1.2公里，中间有饮水机不过我一般就把水放在入口处。顺便提下，东广岛和韩国光州是姐妹城市。</p>
 
 <div class="picture-container">
     <img src="burubaru/kagamiyama/24.JPG" class="picture">
@@ -80,6 +80,10 @@
     <img src="burubaru/kagamiyama/15.JPG" class="picture">
 </div>
 <div style="text-align: center;">儿童游乐场，周末很多人的（往回拍）。</div>
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/autumn/25.JPG" class="picture">
+</div>
 
 <div class="picture-container">
     <img src="burubaru/kagamiyama/27.JPG" class="picture">
