--- a/car.html
+++ b/car.html
@@ -42,56 +42,71 @@
 <div class="picture-container">
     <img src="car/1.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">我和小浪哥（挂饰时日本折纸）。</div>
 
 <div class="picture-container">
-    <img src="car/.JPG" class="picture">
+    <img src="car/11.JPG" class="picture">
+</div>
+<div style="text-align: center;">小浪哥的家（家里停车场）。当时作为新手，这个车位很好停车。</div>
+
+<div class="picture-container">
+    <img src="car/5.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-    <img src="car/.JPG" class="picture">
+    <img src="car/6.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+<p>现在从多角度看看他。</p>
+
+<div class="picture-container">
+    <img src="car/2.JPG" class="picture">
+</div>
+<div style="text-align: center;">学校停车场。</div>
+
+<div class="picture-container">
+    <img src="car/3.JPG" class="picture">
+</div>
+<div style="text-align: center;">每周五上午去吃早饭的コメダ。</div>
+
+<div class="picture-container">
+    <img src="car/4.JPG" class="picture">
+</div>
+<div style="text-align: center;">侧面帅吗？</div>
+
+
+<div class="picture-container">
+    <img src="car/7.JPG" class="picture">
+</div>
+<div style="text-align: center;">专为我们出门而设的后备箱。</div>
+
+<div class="picture-container">
+    <img src="car/8.JPG" class="picture">
+</div>
+<div style="text-align: center;">这个时候后座已经清理了，原来我很齐全，有很多塑料袋的...</div>
+
+<div class="picture-container">
+    <img src="car/10.JPG" class="picture">
+</div>
+<div style="text-align: center;">后座可以放饮料的。这是个高级车。</div>
+
+
+<div class="picture-container">
+    <img src="car/9.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-    <img src="car/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="car/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="car/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="car/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="car/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="car/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="car/.JPG" class="picture">
+    <img src="car/12.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
 
-
-
+<div class="pictur10-container">
+    <img src="car/15.JPG" class="picture">
+</div>
+<div style="text-align: center;">2023年1月底，再见了！感谢你带我们去那么多地方，给我们无数美好的回忆和欢乐时刻，让我们更认识日本。帮我拍照是车行橘老板，他很客气的说。</div>
 
 
 <p>下一章</p>
