--- a/church.html
+++ b/church.html
@@ -117,45 +117,6 @@
 <div style="text-align: center;">准备出发了。感谢强哥为我们做旗。</div>
 
 <div class="picture-container">
-    <img src="church/20190616tottori/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="church/20190616tottori/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="church/20190616tottori/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="church/20190616tottori/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="church/20190616tottori/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="church/20190616tottori/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-<div class="picture-container">
-    <img src="church/20190616tottori/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="church/20190616tottori/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
     <img src="church/20190616tottori/6.JPG" class="picture">
 </div>
 <div style="text-align: center;">到达目的地先来个合影。</div>
@@ -218,13 +179,125 @@
 <div class="picture-container">
     <img src="church/20190616tottori/3.JPG" class="picture">
 </div>
+<p>2019年9月，我再接再厉，组织大家参加学校接力赛。好像连续跑4小时，不限人数，不限制每人跑多少。正值初秋，银杏树已经金黄。之后一年疫情这比赛停了好几年。</p>
+<p>我们先来欣赏学校初秋的银杏树。</p>
 
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/1.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
 
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/2.JPG" class="picture">
+</div>
+
+<p>现在来看看大家跑姿～</p>
+<div style="text-align: center;"></div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/3.JPG" class="picture">
+</div>
+<div style="text-align: center;">翔哥比较辛苦。</div>
+
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/6.JPG" class="picture">
+</div>
+<div style="text-align: center;">林姐妹</div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/8.JPG" class="picture">
+</div>
+<div style="text-align: center;">拍照最上象的洗碗王子屈。</div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/15.JPG" class="picture">
+</div>
+<div style="text-align: center;">午梅姐妹</div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/12.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>高桥老师<div class="picture-container">
+    <img src="church/2019.10.14marathon/13.JPG" class="picture">
+</div>
+<div style="text-align: center;">森冈先生</div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/16.JPG" class="picture">
+</div>
+<div style="text-align: center;">接棒</div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/29.JPG" class="picture">
+</div>
+<div style="text-align: center;">最后上场的我。</div>
+
+<p>场下也一样精彩。</p>
+<div style="text-align: center;"></div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/7.JPG" class="picture">
+</div>
+<div style="text-align: center;">今天专门打扮一番的经纪人花花。</div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/11.JPG" class="picture">
+</div>
+<div style="text-align: center;">打扮是为了拍美照，还有其他原因。。。</div>
+
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/14.JPG" class="picture">
+</div>
+<div style="text-align: center;">是为了和帅哥合影。</div>
+
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/21.JPG" class="picture">
+</div>
+<div style="text-align: center;">这个跳跃照片拍了无数张，这张最好就是屈不协调。话说这种照片乐乐最会拍。</div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/28.JPG" class="picture">
+</div>
+<div style="text-align: center;">谁的手机这张颜色那么鲜艳。</div>
+
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/27.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/23.JPG" class="picture">
+</div>
+<div style="text-align: center;">我们冲刺了。</div>
+
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/19.JPG" class="picture">
+</div>
+
+<div style="text-align: center;"></div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/20.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/25.JPG" class="picture">
+</div>
+
+<div style="text-align: center;"></div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/26.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/30.JPG" class="picture">
+</div>
+<div style="text-align: center;">最后当然是吃饭庆祝。当日大概下午两三点了，很多地方都关门，但镜山公园的酱油厂还开。</div>
+<div class="picture-container">
+    <img src="church/2019.10.14marathon/22.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<p>2019年端午节林姐妹给大家包的爱心粽子。</p>
 
 <div class="picture-container">
     <img src="church/2019zongzi/2.JPG" class="picture">
 </div>
-<div style="text-align: center;">2019年端午节林姐妹给大家包的爱心粽子。</div>
+
 
 <div class="picture-container">
     <img src="church/2019zongzi/1.JPG" class="picture">
@@ -250,6 +323,144 @@
     <img src="church/2020.03mentor_album/4.JPG" class="picture">
 </div>
 <div style="text-align: center;">收到礼物～</div>
+
+<p>同样是2020年3月毕业季，当时周六团契我组织了一次阿姨感谢日，由留学生负责做饭，平时都是阿姨做给他们吃。那个时候疫情已经开始，很多人不来。我也就接管了厨房了，下面还有我周日做的国际美食。</p>
+
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/4.JPG" class="picture">
+</div>
+<div style="text-align: center;">大家在准备。我做的其中一个菜是山西拔烂子。首先需要土豆擦丝，这个工作不用动脑子，所以我交给别人做，不过我都说的很好听：你做的工作是最重要的。然后裹面粉是我和乐乐，最后林姐妹负责蒸。</div>
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/6.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="church/covid/1.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/7.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/8.JPG" class="picture">
+</div>
+<div style="text-align: center;">拔烂子上了～</div>
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/9.JPG" class="picture">
+</div>
+<div style="text-align: center;">等吃～</div>
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/10.JPG" class="picture">
+</div>
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/1.JPG" class="picture">
+</div>
+<div style="text-align: center;">猪耳朵，一般日本超市不好买。隔壁Mr Max超市很多一般日本超市买不到的东西。或说日本有烧烤店吃猪耳朵的，烧烤不错。</div>
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/2.JPG" class="picture">
+</div>
+<div style="text-align: center;">正宗山西拔烂子。有些地方蘸调料吃。</div>
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/3.JPG" class="picture">
+</div>
+<div style="text-align: center;">鸡脆骨。日本一般吃鸡胸软骨但我更爱这个。直接放锅里干煎，它会自己出很多油的。除了Mr Max我没在其他地方见过。</div>
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/5.JPG" class="picture">
+</div>
+<div style="text-align: center;">学长的红烧肉。他很会做的。</div>
+<div class="picture-container">
+    <img src="church/2020.03church_dinner/10.JPG" class="picture">
+</div>
+<div style="text-align: center;">大家开饭，非常丰盛的一顿饭。</div>
+
+<p>我们现在来看看疫情下的教会。</p>
+
+<div class="picture-container">
+    <img src="church/covid/5.JPG" class="picture">
+</div>
+<div style="text-align: center;">疫情下的聚会，很冷清。</div>
+
+<div class="picture-container">
+    <img src="church/covid/4.JPG" class="picture">
+</div>
+
+
+
+<div class="picture-container">
+    <img src="church/covid/2.JPG" class="picture">
+</div>
+<div style="text-align: center;"> 很想吃茴香饺子。农家超市有买，有次买了教会包来吃。</div>
+
+<p>我们来看疫情下的厨房，以前都是阿姨们主理，现在完全不一样了，菜的风格也变了，因为是我主理。不过都是我在拍照记录，所以照片没有我。</p>
+<div class="picture-container">
+    <img src="church/covid/6.JPG" class="picture">
+</div>
+<div style="text-align: center;"> 涛涛很积极。每次都问我有什么要帮忙。</div>
+<div class="picture-container">
+    <img src="church/covid/9.JPG" class="picture">
+</div>
+<div class="picture-container">
+    <img src="church/covid/7.JPG" class="picture">
+</div>
+<div style="text-align: center;">于传道帮忙加菜。</div>
+
+<div class="picture-container">
+    <img src="church/covid/8.JPG" class="picture">
+</div>
+<div style="text-align: center;">强哥很积极每次饭后洗碗。</div>
+
+<div class="picture-container">
+    <img src="church/covid/13.JPG" class="picture">
+</div>
+<div style="text-align: center;">留学生当主厨。</div>
+
+<div class="picture-container">
+    <img src="church/covid/10.JPG" class="picture">
+</div>
+<div style="text-align: center;">现在来看看我做的菜，糖醋里脊。</div>
+
+<div class="picture-container">
+    <img src="church/covid/11.JPG" class="picture">
+</div>
+<div style="text-align: center;">阿姨做的东北酸菜。长期放在冰箱里。我们拿来炖肉了。</div>
+
+<div class="picture-container">
+    <img src="church/covid/12.JPG" class="picture">
+</div>
+<div style="text-align: center;">乐乐做的乡土料理 - 槐花炒鸡蛋。后来我自己在学校一个隐秘处也找到槐花摘了自己做。</div>
+<div class="picture-container">
+    <img src="church/covid/14.JPG" class="picture">
+</div>
+<div style="text-align: center;">印尼沙爹。因为见教会有很多黄油，我还做过英国班尼迪酱拌意大利面。</div>
+<p>2020年6月，大家给我办了生日派对，很开心呢。</p>
+  <img src="church/202006birthday/1.JPG" class="picture">
+
+  <img src="church/202006birthday/2.JPG" class="picture">
+
+    <video controls style="width: 60%; height: auto;">
+        <source src="202006birthday/3.MP4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;">日语生日歌。 </div>
+
+    <video controls style="width: 60%; height: auto;">
+        <source src="202006birthday/4.MP4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;">中文生日歌。 </div>
+
+   <video controls style="width: 60%; height: auto;">
+        <source src="202006birthday/5.MP4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;">吹蜡烛许愿。 </div>
+
+   <video controls style="width: 60%; height: auto;">
+        <source src="202006birthday/6.MP4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;">唱歌及我们闲聊。 </div>
 
 <p>下一章</p>
 <br><br>
