--- a/kagami.html
+++ b/kagami.html
@@ -90,6 +90,12 @@
 </div>
 <div style="text-align: center;">镜山公园一般跑步的人不多，偶尔还是有的。好像就只有我在里面一直跑圈。</div>
 
+
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/IMG_6019.JPG" class="picture">
+</div>
+<div style="text-align: center;">插一张2019年靓靓帮我拍的，当时备战6月鸟取10公里，跑完来我家洗澡然后去paganini。</div>
+
 <div class="picture-container">
     <img src="burubaru/kagamiyama/28.JPG" class="picture">
 </div>
