--- a/car.html
+++ b/car.html
@@ -19,11 +19,40 @@
             <p>上一章</p>
 
 <p>我的小浪哥要登场了～这是他干妈给他起的名字，因为他经常带着我们出去玩，干妈每次出门都记得给他拍照呢。关于学车，我其实从来没想过学。以前在北京身边很多朋友学，不过我觉得没需要。在德国也是，直到来了这里，经济负担得起，而且确实有需要我才学。日本学车效率很高，最高效率是合宿（一群人一起在驾校住两周天天学），在驾校也可以学的很快，我前后5个月（一周学4节课，不过补课有些多），算是慢的。学的的确不太好，第一阶段在场内窄路学了好多次才过。每次上课都有目标，不过就要补课，补课要收费的，但可以一开始报名时买个保险然后就可以无限补课。我看补习保险费有点高所以没买，最后没想到自己补了那么多...第一阶段考试考了5次（第4次开始免费考），第2阶段两次。感谢指导我的峡户邦典先生，我之前试过别的只有他的日语我听的懂。对了，我全程日语学日语考试，日语不需要很好也行的。笔试我确实看得懂，感谢杨冲事前翻译课本。</p>
+
+<p>我先上一下我的学车记录。</p>
+
+<div class="picture-container">
+    <img src="car/IMG_6065.JPG" class="picture">
+</div>
+<div style="text-align: center;">预约条。原来我试过一天上三节课。</div>
+
+
+<div class="picture-container">
+    <img src="car/IMG_6038.JPG" class="picture">
+</div>
+<div style="text-align: center;">我第一阶段（驾校场内驾驶）学习记录。看第11节课窄路我学的特别不好，以致我后面一直不敢开窄路。不过我还是开了很多次乡下窄路，而且是单程路。</div>
+
+
+<div class="picture-container">
+    <img src="car/IMG_6039.JPG" class="picture">
+</div>
+<div style="text-align: center;">我第二阶段（场外驾驶）学习记录。</div>
+
 <p>话说西条学车方便，我学的贺茂驾校就在家附近步行10多分钟就到。西条几个驾校都提供班车往返主要地方，例如车站，广大。我有时候就学第一节然后坐班车去学校，下班坐班车去驾校学最后一节。驾校附近的快餐店也吃过很多次晚餐，快餐店于疫情时结业。</p>
 
-<p>对了，这章是说小浪哥不是说我学车的。我买车主要为了自驾游，不是为了上下班。我这个人很现实，没有车时从来没想过去哪玩，有了之后才疯狂想。我学完车的时候7月，这个时候其实挺不好买的（一般3月及9月毕业季好买）。6月开始在群里关注，有人出车而且价格便宜，带一年半车检而且该年的税也给了才16万，行走了9万多公里，车龄16，7年左右（很高，所以税贵）。这辆车可以说为我自驾游量身定做。我的目的是自驾游，带人的。这辆车比一般的车宽，坐的舒服，而且三节，行李箱比2节的大多。我们出门都自己做饭，带很多东西，这辆车正好。买的时候9万多公里，我也已经准备自己是最后一手车主，就让他去最多的地方，承载最美好的回忆。</p>
+<p>对了，这章是说小浪哥不是说我学车的。我买车主要为了自驾游，不是为了上下班。我这个人很现实，没有车时从来没想过去哪玩，有了之后才疯狂想。我学完车的时候7月，这个时候其实挺不好买的（一般3月及9月毕业季好买）。6月开始在群里关注，有人出车而且价格便宜，带一年半车检而且该年的税也给了才16万，行走了9万多公里，2004年（平成16年）1月的车，当时15年车龄（很高，所以税贵）。这辆车可以说为我自驾游量身定做。我的目的是自驾游，带人的。这辆车比一般的车宽，坐的舒服，而且三节，行李箱比2节的大多。我们出门都自己做饭，带很多东西，这辆车正好。买的时候9万多公里，我也已经准备自己是最后一手车主，就让他去最多的地方，承载最美好的回忆。</p>
+
+<p>我其实一点都不疼他。从来不刻意洗车。用了几年洗过不到10次，我觉得下雨就自动清洗。而且我对车一窍不通，应该半年换一次机油我就车检换过一次，还好他没事。我的水平几年都没用过保险真是神保佑。话说有次冬天，玻璃模糊，在车内我用扫擦了一下，之后变得彻底模糊，但我不能停车（其实应该无论如何还是要停）。后来开了一段雾气去除了，好惊险。</p>
 
 <p>话说，我这个中国结专家大四时学会中国结自己从来没挂过，因为我自己本身不喜欢那些东西，我只疯狂喜欢制作过程（有些人不太明白享受过程的）。但有了车后我就很想挂一个，后来不同季节换不同款式，还有日式折纸。</p>
+
+<div class="picture-container">
+    <img src="car/IMG_6055.JPG" class="picture">
+</div>
+<div style="text-align: center;">车检证，非常重要的文件，一直要放在车内的，出了事故检查要看。</div>
+
+
 <div class="picture-container">
     <img src="car/16.JPG" class="picture">
 </div>
@@ -106,7 +135,7 @@
 <div class="pictur10-container">
     <img src="car/15.JPG" class="picture">
 </div>
-<div style="text-align: center;">2023年1月底，再见了！感谢你带我们去那么多地方，给我们无数美好的回忆和欢乐时刻，让我们更认识日本。帮我拍照是车行橘老板，他很客气的说。</div>
+<div style="text-align: center;">2023年1月底，小浪哥19岁，再见了！感谢你带我们去那么多地方，给我们无数美好的回忆和欢乐时刻，让我们更认识日本。帮我拍照是车行橘老板，他很客气的说。</div>
 
 
 <p>下一章</p>
