--- a/burubaru.html
+++ b/burubaru.html
@@ -284,10 +284,30 @@
 <div class="picture-container">
    <img src="burubaru/after_kagami/5.JPG" class="picture">
 </div>
+
+<body>
+    
+    <div class="separator" style="clear: both; text-align: center;"><iframe allowfullscreen="" class="BLOG_video_class" width="560" height="315" src="https://www.youtube.com/embed/R7gFn9963LE" width="320" youtube-src-id="R7gFn9963LE"></iframe></div
+        
+    <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div style="text-align: center;">广大樱花街。</div>
+<!-- burubaru/HU/sakura/mp4-->
+    </div>
+   
+
+
 <div class="picture-container">
    <img src="burubaru/HU/1.JPG" class="picture">
 </div>
 <div style="text-align: center;">我们来赏赏樱。这是春季照。</div>
+
+
+<div class="picture-container">
+   <img src="burubaru/HU/summer.JPG" class="picture">
+</div>
+<div style="text-align: center;">对比下一张夏季照（往回拍），也很漂亮的。</div>
+
 <div class="picture-container">
    <img src="burubaru/HU/16.JPG" class="picture">
 </div>
