--- a/around_home.html
+++ b/around_home.html
@@ -44,10 +44,12 @@
 </div>
 <div style="text-align: center;">下楼往左看的房子。</div>
 <div class="picture-container">
+    <img src="around_home/0.JPG" class="picture">
+</div>
+<div style="text-align: center;">对面的图书馆樱花季时，这是ブールバール西侧，我家是东侧，有天桥连接。那栋白色大厦是我刚来不久盖好的，是这里的高档公寓。开二号线离远就见到。</div>
+<div class="picture-container">
     <img src="around_home/1.JPG" class="picture">
 </div>
-<div style="text-align: center;">对面的图书馆樱花季时，这是ブールバール西侧，我家是东侧，有天桥连接。</div>
-
 <div class="picture-container">
     <img src="around_home/23.JPG" class="picture">
 </div>
