--- a/burubaru.html
+++ b/burubaru.html
@@ -33,6 +33,9 @@
 <div class="picture-container">
     <img src="burubaru/before_kagami/7.JPG" class="picture">
 </div>
+<div class="picture-container">
+    <img src="burubaru/before_kagami/A.JPG" class="picture">
+</div>
 
 <div class="picture-container">
     <img src="burubaru/before_kagami/8.JPG" class="picture">
@@ -278,11 +281,11 @@
 <div style="text-align: center;">过完马路往回拍。</div>
 
 <div class="picture-container">
-   <img src="burubaru/after_kagami/4.JPG" class="picture">
+   <img src="burubaru/HU/A.JPG" class="picture">
 </div>
 <div style="text-align: center;">烟囱越来越近了。2017年12月1日我第一天来的时候，看到这个烟囱，我深深感觉，我终于来了～</div>
 <div class="picture-container">
-   <img src="burubaru/after_kagami/5.JPG" class="picture">
+   <img src="burubaru/HU/B.JPG" class="picture">
 </div>
 
 <body>
