--- a/burubaru_around_home.html
+++ b/burubaru_around_home.html
@@ -31,6 +31,11 @@
 <p>&nbsp;</p>
 
 <div class="picture-container">
+    <img src="burubaru/around_home/WechatIMG32.JPG" class="picture">
+</div>
+<div style="text-align: center;">顺便说说，日本对每两自行车进行防犯登陆，买车时登记。专卖可以在登记，我当时500日元，离开日本时600。标签里面有车主资料。理论上路上可能有警察查不过我从来没遇到过。</div>
+
+<div class="picture-container">
     <img src="burubaru/around_home/1.JPG" class="picture">
 </div>
 <div style="text-align: center;">先看看我的样子，夏天我是这副防晒装备。</div>
