--- a/car.html
+++ b/car.html
@@ -69,6 +69,26 @@
 <div style="text-align: center;">另一给自己做，圣诞节挂的圣诞树。</div>
 
 <div class="picture-container">
+    <img src="car/201908C.JPG" class="picture">
+</div>
+<div style="text-align: center;">2019年8月，刚拿到驾照一周周日去完教会开车去广岛市练车。当时去奥特莱斯（outlet）购物及Costco超市。</div>
+
+<div class="picture-container">
+    <img src="car/201908B.JPG" class="picture">
+</div>
+<div style="text-align: center;">我和小浪哥（挂饰时日本折纸）。</div>
+
+<div class="picture-container">
+    <img src="car/201908A.JPG" class="picture">
+</div>
+<div style="text-align: center;">我们在Costco买的丰盛晚餐。这里很出名全鸡，大概700日元很大的，不过味道很日本。学长把它做手撕鸡了，凉拌了好吃很多。晚饭还发生丢wifi事件。我的移动wifi当时放在桌上，饭后被吃饭时垫桌子吃饭用的报纸裹着当垃圾扔了。。。当时我在家里找不着，然后下楼把垃圾袋捡回来找到了。。。吃饭的时候记得靓靓一定要用漂亮的盘子，一个爱美的女孩。</div>
+
+<div class="picture-container">
+    <img src="car/201908D.JPG" class="picture">
+</div>
+<div style="text-align: center;">学长切的萝卜丝。</div>
+
+<div class="picture-container">
     <img src="car/1.JPG" class="picture">
 </div>
 <div style="text-align: center;">我和小浪哥（挂饰时日本折纸）。</div>
