--- a/church.html
+++ b/church.html
@@ -73,6 +73,17 @@
 <div style="text-align: center;">在教会洗碗侍奉，是一项非常神圣的工作，还有人特别有恩赐，不但洗得干净而且特别积极。</div>
 
 <div class="picture-container">
+    <img src="church/kids.JPG" class="picture">
+</div>
+<div style="text-align: center;">教会的小朋友，现在都大了。</div>
+
+
+<div class="picture-container">
+    <img src="church/friends.JPG" class="picture">
+</div>
+<div style="text-align: center;">和朋友们在教会合影。</div>
+
+<div class="picture-container">
     <img src="church/kitchen/3.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
@@ -414,6 +425,7 @@
     <img src="church/covid/13.JPG" class="picture">
 </div>
 <div style="text-align: center;">留学生当主厨。</div>
+
 
 <div class="picture-container">
     <img src="church/covid/10.JPG" class="picture">
