--- a/kagami.html
+++ b/kagami.html
@@ -102,7 +102,10 @@
 <div style="text-align: center;">差不多到最后一条不到100米的大直路，之后就要准备上坡了。</div>
 
 <div class="picture-container">
-    <img src="burubaru/kagamiyama/11.JPG" class="picture">
+    <img src="burubaru/kagamiyama/16.JPG" class="picture">
+</div>
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/31.JPG" class="picture">
 </div>
 <div class="picture-container">
     <img src="burubaru/kagamiyama/7.JPG" class="picture">
