--- a/gym.html
+++ b/gym.html
@@ -130,15 +130,65 @@
 </div>
 <div style="text-align: center;">这个炒蛋配吐司像港式早餐。</div>
 
+
+
+<p>除了跑步，这几年加入的新运动习惯是游泳，2022年夏天开始。当时我发现西条有游泳池就拉小伙伴去，还买了新泳衣。那叫东广道复康中心（東広島リハビリテーションセンター）频率约1个月2-3次。每次游1公里，游完要不去外面吃，要不回研究室煮面。这是给残疾人的复康中心，有全面的体育设施（除了游泳池还有体育馆，乒乓球及视障人士跑道）。这里一次性门票500日元，所有设施可用，套票5000元11张。通常🧅买套票我每次给他500。可能时间9:30.我们习惯周三早9:30游。日本游泳池一定要带泳帽。</p>
+
 <div class="picture-container">
-    <img src="gym/.JPG" class="picture">
+    <img src="gym/swimming_pool_.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_2.JPG" class="picture">
+</div>
+<div style="text-align: center;">门票及去游泳池要换的牌子。</div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_3.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-    <img src="gym/.JPG" class="picture">
+    <img src="gym/swimming_pool_2.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_2.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_2.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_2.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_2.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_2.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+
+
+
 
 
 <p>下一章</p>
