--- a/gym.html
+++ b/gym.html
@@ -132,18 +132,64 @@
 
 
 
-<p>除了跑步，这几年加入的新运动习惯是游泳，2022年夏天开始。当时我发现西条有游泳池就拉小伙伴去，还买了新泳衣。那叫东广道复康中心（東広島リハビリテーションセンター）频率约1个月2-3次。每次游1公里，游完要不去外面吃，要不回研究室煮面。这是给残疾人的复康中心，有全面的体育设施（除了游泳池还有体育馆，乒乓球及视障人士跑道）。这里一次性门票500日元，所有设施可用，套票5000元11张。通常🧅买套票我每次给他500。可能时间9:30.我们习惯周三早9:30游。日本游泳池一定要带泳帽。</p>
+<p>除了跑步，这几年加入的新运动习惯是游泳，2022年夏天开始。当时我发现西条有游泳池就拉小伙伴去，还买了新泳衣。那叫东广道复康中心（東広島リハビリテーションセンター）频率约1个月2-3次。每次游1公里，游完要不去外面吃，要不回研究室煮面。这是给残疾人的复康中心，有全面的体育设施（除了游泳池还有体育馆，乒乓球，健身房及视障人士跑道）。这里一次性门票500日元，所有设施可用，套票5000元11张。通常🧅买套票我每次给他500。可能时间9:30.我们习惯周三早9:30游。日本游泳池一定要带泳帽。另外我们也打网球，通常这周网球下周游泳。网球运动量不高，不替代跑步，但游泳替代一次的。</p>
+<p>虽然我小时候就会游泳，但没有养成习惯，所以我只是一直跑步。直到我在西条把游泳变成生活日程，现在在香港也是一周游泳一次。</p>
+<p>感谢一直陪我玩的杨冲小伙伴。</p>
+
+
+
+<p>我们先来看看中心。</p>
 
 <div class="picture-container">
-    <img src="gym/swimming_pool_.JPG" class="picture">
+    <img src="gym/swimming_pool_13.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">大门</div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_7.JPG" class="picture">
+</div>
+<div style="text-align: center;">大厅</div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_5.JPG" class="picture">
+</div>
+<div style="text-align: center;">另一角度拍大厅</div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_12.JPG" class="picture">
+</div>
+<div style="text-align: center;">从入口拍</div>
 
 
 <div class="picture-container">
-    <img src="gym/swimming_pool_.JPG" class="picture">
+    <img src="gym/swimming_pool_4.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">活动告示</div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_6.JPG" class="picture">
+</div>
+<div style="text-align: center;">活动告示</div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_9.JPG" class="picture">
+</div>
+<div style="text-align: center;">残章人士手工艺</div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_10.JPG" class="picture">
+</div>
+<div style="text-align: center;">残章人士手工艺</div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_11.JPG" class="picture">
+</div>
+<div style="text-align: center;">残章人士手工艺</div>
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_8.JPG" class="picture">
+</div>
+<div style="text-align: center;">健身房</div>
 
 
 <div class="picture-container">
@@ -151,43 +197,129 @@
 </div>
 <div style="text-align: center;">门票及去游泳池要换的牌子。</div>
 
+
 <div class="picture-container">
     <img src="gym/swimming_pool_3.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">经过这条路进去游泳池更衣室。</div>
 
 <div class="picture-container">
-    <img src="gym/swimming_pool_2.JPG" class="picture">
+    <img src="gym/swimming_pool_17.JPG" class="picture">
+</div>
+<div style="text-align: center;">游泳池。</div>
+
+
+    <video controls style="width: 60%; height: auto;">
+        <source src="gym/swimming_pool_1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;">我又来跑步了。 </div>
+
+
+    <video controls style="width: 60%; height: auto;">
+        <source src="gym/swimming_pool_2.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;">我使用残章人士设施跑步。 </div>
+
+
+<div class="picture-container">
+    <img src="gym/swimming_pool_15.JPG" class="picture">
+</div>
+<div style="text-align: center;">乒乓球，这里还提供球拍和球。玩完要打扫（消毒桌子）。</div>
+
+
+<p>除了游泳，我们也打网球。2020年一次旅行因为去了之前去过的地方，所以要安排其他行程，我就安排了网球了，因为那里有场地。第一次打的时候一个球也接不上，不过我很喜欢那节奏感。当时我有车，可以去东广岛运动公园，研究室也有大量球拍和球。条件配合，我就抓住我第一次的感觉开始了。这个小经历教会我，你有兴趣就要马上抓住开始，这样兴趣才能变成你生活甚至生命的一部分。当时疫情，第一次去打是2020年冬天，学校体育设施长时间不开，只能去运动公园。2023年初解封后我们就在学校打了。运动公园的场是比赛场地，确实很漂亮，网球每小时520日元，我们首选最靠边的6号场。要洗澡的话每次100日元（投币），我们都不洗。话说，香港洗澡免费的。</p>
+<p>我们第一次去运动公园打打到我胳膊疼，当时偶尔去，后来每周去，直到开始游泳。我到后来连续两小时都不疼。2021年3月我们出门去旅行时也打了网球，当时人家问我们打软球还是硬球我们都不懂，试过软球后我们才知道自己打的是硬球。但那次发现软球容易很多，我们就开始打软了，进步得很快呢。其实软球有软球球拍的，不过我们无所谓了。两个人一直瞎打打了一段时间，虽然不专业但总算进步了很多了。</p>
+
+
+<div class="picture-container">
+    <img src="gym/sports_park_1.JPG" class="picture">
+</div>
+<div style="text-align: center;">网球场附近</div>
+
+<div class="picture-container">
+    <img src="gym/sports_park_3.JPG" class="picture">
+</div>
+<div style="text-align: center;">022年1月参加西条挑战杯获胜，耶！</div>
+
+<div class="picture-container">
+    <img src="gym/sports_park_2.JPG" class="picture">
+</div>
+<div style="text-align: center;">带两位第一次打网球的mm来打网球。</div>
+
+<div class="picture-container">
+    <img src="gym/sports_park_4.JPG" class="picture">
+</div>
+<div style="text-align: center;">和乐乐打。</div>
+
+<div class="picture-container">
+    <img src="gym/sports_park_5.JPG" class="picture">
+</div>
+<div style="text-align: center;">和办公室的日本同学打网球。我俩是菜鸟。</div>
+
+<div class="picture-container">
+    <img src="gym/sports_park_7.JPG" class="picture">
+</div>
+<div style="text-align: center;">和办公室的日本同学在网球场附近樱花树下合影。</div>
+
+<div class="picture-container">
+    <img src="gym/sports_park_8.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-    <img src="gym/swimming_pool_2.JPG" class="picture">
+    <img src="gym/sports_park_6.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-    <img src="gym/swimming_pool_2.JPG" class="picture">
+    <img src="gym/sports_park_9.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
+
 
 <div class="picture-container">
-    <img src="gym/swimming_pool_2.JPG" class="picture">
+    <img src="gym/swimming_pool_1.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">游泳或打完网球，经常游玩去附近天龟吃饭。这个套餐1000日元，分量很多，非常划算。乌冬手打的特别筋道，釜饭吃到中间加汤再煮。</div>
 
 <div class="picture-container">
-    <img src="gym/swimming_pool_2.JPG" class="picture">
+    <img src="gym/swimming_pool_14.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">很好吃的釜饭。</div
+<p>除了以上，我还打过两次パークゴロフ（park golf），在西条以北的福富，开车约半小时。门票1040日元，玩一圈，另租用工具310元。次活动在地图上看的，无意中发现就想去玩。第一次平时早上去，都是爷爷奶奶，很热闹。另一次周末下午，反而没人，就两个家庭。那里环境优美，这个玩意新奇有趣。第一次和杨冲去玩，他竟然玩的比我好（唯一玩的比我好的运动）。</p>
 
 <div class="picture-container">
-    <img src="gym/swimming_pool_2.JPG" class="picture">
+    <img src="gym/202104_golf_1.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">应该是2021年秋天。平日早上很热闹。</div>
+
+<div class="picture-container">
+    <img src="gym/202104_golf_2.JPG" class="picture">
+</div>
+<div style="text-align: center;">杨冲</div>
+
+<div class="picture-container">
+    <img src="gym/202104_golf_3.JPG" class="picture">
+</div>
+<div style="text-align: center;">我</div>
+
+<div class="picture-container">
+    <img src="gym/202104_golf_4.JPG" class="picture">
+</div>
+<div style="text-align: center;">进洞了！</div>
+
+<div class="picture-container">
+    <img src="gym/202104_golf_5.JPG" class="picture">
+</div>
+<div style="text-align: center;">和乐乐在冬末。</div>
 
 
-
+<div class="picture-container">
+    <img src="gym/202104_golf_6.JPG" class="picture">
+</div>
+<div style="text-align: center;">乐乐学过哥尔夫，打的很好。</div>
 
 
 
