--- a/kagami_autumn_winter.html
+++ b/kagami_autumn_winter.html
@@ -94,6 +94,12 @@
 </div>
 <div style="text-align: center;">还认得这棵树吗？我之前说过红的最晚的。12月初也只是红了一点点。</div>
 
+<div class="picture-container">
+    <img src="burubaru/kagamiyama/autumn/A.JPG" class="picture">
+</div>
+<div style="text-align: center;">这就是这棵树12月的时候。</div>
+
+
 
 <div class="picture-container">
     <img src="burubaru/kagamiyama/autumn/21.JPG" class="picture">
