--- a/burubaru.html
+++ b/burubaru.html
@@ -101,6 +101,8 @@
     <img src="burubaru/before_kagami/13.JPG" class="picture">
  </div>
  <div style="text-align: center;">马路对面的陵园，2018豪雨后就这样。</div>
+
+
  <div class="picture-container">
     <img src="burubaru/before_kagami/14.JPG" class="picture">
  </div>
@@ -200,6 +202,12 @@
    <img src="burubaru/after_kagami/8.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="burubaru/after_kagami/A.JPG" class="picture">
+ </div>
+ <div style="text-align: center;">秋天红叶（应该和上面是同一景）。</div>
+
 <div class="picture-container">
    <img src="burubaru/after_kagami/10.JPG" class="picture">
 </div>
