--- a/burubaru-2018flood.html
+++ b/burubaru-2018flood.html
@@ -17,7 +17,7 @@
     <main class="content">
         <article>
             <p>上一章</p>
-            <p>2018年7月，广岛县经历了前所未有的豪雨。西条虽然不是最重的灾区但也很严重。铁路停运了几天，公路坍塌，食品无法运输。全市超市被抢购一空。学校食堂难得还有饭，我从来没见过那么多人排队。镜山公园山体滑坡一年后才修好。ブールバール塌树车路封闭，其中一段充满泥泞。当日是周六，雨是周五下的，但周五下班时雨也不是特别大，我也没印象什么时候下的豪雨了。</p>
+            <p>2018年7月，广岛县经历了前所未有的豪雨。西条虽然不是最重的灾区但也很严重。铁路停运了几天，公路坍塌，食品无法运输。全市超市被抢购一空。学校食堂难得还有饭，我从来没见过那么多人排队。镜山公园山体滑坡一年后才修好。ブールバール塌树车路封闭，其中一段充满泥泞。当日是周六，雨是周五下的，但周五下班时雨也不是特别大，我也没印象什么时候下的豪雨了。我平日生活的地方看到灾情，但没看到受影响的房子，不过已经够心疼。当时很多房屋收山泥影响，也有伤亡，其实就在身边。</p>
             <p>我现在带你们看看当日ブールバール的灾情。</p>
 
             
@@ -71,6 +71,11 @@
     <img src="burubaru/2018flood/18.JPG" class="picture">
 </div>
 <div style="text-align: center;">塌树</div>
+
+<div class="picture-container">
+    <img src="burubaru/2018flood/A.JPG" class="picture">
+</div>
+<div style="text-align: center;">这些树全倒了。</div>
 
 <p>看看对面马路，这是墓园，以前都不知道里面怎样的。</p>
 
