--- a/around_home.html
+++ b/around_home.html
@@ -42,7 +42,18 @@
 <div class="picture-container">
     <img src="around_home/7.JPG" class="picture">
 </div>
-<div style="text-align: center;">下楼往左看的房子。</div>
+<div style="text-align: center;">下楼后往左看的房子。</div>
+
+<div class="picture-container">
+    <img src="around_home/A.JPG" class="picture">
+</div>
+<div style="text-align: center;">很可爱的幼儿园班车，我在东京也见过。</div>
+
+<div class="picture-container">
+    <img src="around_home/B.JPG" class="picture">
+</div>
+
+
 <div class="picture-container">
     <img src="around_home/0.JPG" class="picture">
 </div>
