--- a/burubaru.html
+++ b/burubaru.html
@@ -30,6 +30,11 @@
     <img src="burubaru/before_kagami/1.JPG" class="picture">
 </div>
 <div style="text-align: center;">秋天的红叶</div>
+
+<div class="picture-container">
+    <img src="burubaru/before_kagami/IMG_4743.JPG" class="picture">
+</div>
+<div style="text-align: center;">往回拍一张</div>
 <div class="picture-container">
     <img src="burubaru/before_kagami/7.JPG" class="picture">
 </div>
@@ -179,7 +184,7 @@
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-   <img src="burubaru/before_kagami/19.JPG" class="picture">
+   <img src="burubaru/after_kagami/IMG_4734.JPG" class="picture">
 </div>
 <div style="text-align: center;">这里一大片树林，真有森林公园的感觉。</div>
 
@@ -195,9 +200,20 @@
 <div style="text-align: center;">继续上坡路，冲！右侧是公交站“镜山公园”。</div>
 
 <div class="picture-container">
+   <img src="burubaru/after_kagami/21.JPG" class="picture">
+</div>
+<div style="text-align: center;">往回拍。看到上来的斜坡了吗？应该也就两三百米，也不算太辛苦。</div>
+
+<div class="picture-container">
    <img src="burubaru/HU/13.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/B.JPG" class="picture">
+</div>
+<div style="text-align: center;">这里骑车真舒适。</div>
+
 <div class="picture-container">
    <img src="burubaru/after_kagami/8.JPG" class="picture">
 </div>
@@ -249,10 +265,7 @@
    <img src="burubaru/after_kagami/14.JPG" class="picture">
 </div>
 <div style="text-align: center;">出了洞口要冲下坡了。图利车的右侧方向去池上学生宿舍，宿费一个月只要一万多日元。这张往回拍。</div>
-<div class="picture-container">
-   <img src="burubaru/after_kagami/21.JPG" class="picture">
-</div>
-<div style="text-align: center;">往回拍。看到斜坡了吗？</div>
+
 <div class="picture-container">
    <img src="burubaru/after_kagami/13.JPG" class="picture">
 </div>
@@ -272,17 +285,20 @@
 </div>
 
 <div class="picture-container">
-   <img src="burubaru/after_kagami/10.JPG" class="picture">
+   <img src="burubaru/after_kagami/IMG_4714.JPG" class="picture">
+</div>
+<div style="text-align: center;">到学校前的最后一段往回拍，这段下坡要完了。</div>
+
+<div class="picture-container">
+   <img src="burubaru/after_kagami/IMG_4711.JPG" class="picture">
 </div>
 <div style="text-align: center;">现在等过马路，我介绍一下这边情况。这是个十字路口。图里是我等马路时的右手边，到了这里又回到市区了。一个马路就是警察局，之后这边最大的房地产。再往前走（下坡路）约两百米是健身房。左面有银行，再往前有Youme Town（大型购物中心，有百元店及超市不过价格比其他贵）。这一带很多吃的，房租也贵很多，单身公寓要四五万一个月。</div>
 <div class="picture-container">
-   <img src="burubaru/after_kagami/3.JPG" class="picture">
+   <img src="burubaru/after_kagami/IMG_4708.JPG" class="picture">
 </div>
 <div style="text-align: center;">另一角度看十字路口。</div>
 
-<div class="picture-container">
-   <img src="burubaru/after_kagami/17.JPG" class="picture">
-</div>
+
 <div class="picture-container">
    <img src="burubaru/after_kagami/12.JPG" class="picture">
 </div>
@@ -292,6 +308,9 @@
    <img src="burubaru/HU/A.JPG" class="picture">
 </div>
 <div style="text-align: center;">烟囱越来越近了。2017年12月1日我第一天来的时候，看到这个烟囱，我深深感觉，我终于来了～</div>
+<div class="picture-container">
+   <img src="burubaru/HU/D.JPG" class="picture">
+</div>
 <div class="picture-container">
    <img src="burubaru/HU/B.JPG" class="picture">
 </div>
@@ -311,6 +330,9 @@
 </div>
 <div style="text-align: center;">我们来赏赏樱。这是春季照。</div>
 
+<div class="picture-container">
+   <img src="burubaru/HU/C.JPG" class="picture">
+</div>
 
 <div class="picture-container">
    <img src="burubaru/HU/summer.JPG" class="picture">
